--- a/api/views/index.ejs
+++ b/api/views/index.ejs
@@ -7,5 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to Express, <%= title %></p>
+    <p><%= JSON.stringify(config) %></p>
   </body>
 </html>
